--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@mui/material": "^5.6.0",
     "classnames": "^2.3.1",
     "core-js": "^3.21.1",
+    "framer-motion": "^6.3.3",
     "google-maps-react": "^2.0.6",
+    "hamburger-react": "^2.5.0",
     "luxon": "^2.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
