--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "luxon": "^2.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-phone-number-input": "^3.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0"
   },
